--- a/HelloDjango/static/assets/css/main.sass
+++ b/HelloDjango/static/assets/css/main.sass
@@ -20,6 +20,10 @@ body
     font-size: 14px
     margin: 0
 
+h1, h2, h3, h4, h5, h6
+    font-weight: 600
+
+
 a
     color: $black-color
     font-weight: 400
