--- a/HelloDjango/templates/includes/award_requests.html
+++ b/HelloDjango/templates/includes/award_requests.html
@@ -5,7 +5,7 @@
 
 {% if award_requeststg.count %}
 
-<h3 class="text-center pt-5">Участники премии White Birds</h3>
+<h3 class="text-center pt-5">Участники голосования</h3>
 
 <div class="row mt-5 mb-5">
     <div class="col-md-6 mt-3">
